--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask==3.0.3
 Flask-SocketIO==5.3.6
 python-socketio==5.11.3
 python-engineio==4.9.0
-eventlet==0.36.1
+gevent==23.9.1
 gunicorn==21.2.0
